fix: refine blog content emphasis and code spacing

--- a/src/assets/styles/code.scss
+++ b/src/assets/styles/code.scss
@@ -8,7 +8,7 @@ pre {
 .codeWrapper {
   position: relative;
   overflow-x: auto;
-  margin: 1.5rem 0;
+  margin: 0.5rem 0;
 }
 
 .codeWrapper pre {
